# djangoProject

./: db.sqlite3  pyproject.toml
djangoProject/: settings.py
myproject/: settings.py
